# Foundation-Models-Framework-Example

./: .gitignore  .swiftlint-adapter-studio.yml  .swiftlint-core-cli.yml  .swiftlint.yml  AdapterStudioPlan.md  Agents.md  CLAUDE.md  CONTRIBUTING.md  Package-README.md  Package.resolved  Package.swift  README.md  SECURITY.md  audit-findings.md  benchmark  cli_example.py  fmf.md  github_issue_cli_target.md  plan.md  refactor-audit-plan.md  swiftlint.yml
.asc/: workflow.json
.claude/: settings.local.json
FMF/: FMFApp.swift
Tools/AdapterStudio/: .gitignore  ContentView.swift  README.md  customadapter.md  pyproject.toml
Tools/AdapterStudio/Adapter Studio.xcodeproj/: project.pbxproj
Tools/AdapterStudio/Adapter Studio.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Tools/AdapterStudio/Adapter Studio.xcodeproj/xcuserdata/rudrankriyam.xcuserdatad/xcschemes/: xcschememanagement.plist
Tools/AdapterStudio/Services/Compare/: ModelCompareEngine.swift  ModelCompareSource.swift
Tools/AdapterStudio/Services/Provider/: AdapterContext.swift  AdapterProvider.swift  AdapterProviderError.swift
Tools/AdapterStudio/ViewModels/: CompareViewModel.swift
Tools/AdapterStudio/Views/: CompareWorkbenchView.swift  SessionColumnView.swift
Tools/AdapterStudio/adapter_cli/: __init__.py  __main__.py  banner.py  config.py  discovery.py  validator.py
Tools/AdapterStudio/adapter_cli/commands/: __init__.py  demo.py  export.py  generate.py  init.py  setup.py  train_adapter.py  train_draft.py
Tools/AdapterStudio/tests/: test_cli.py  test_config.py  test_validator.py
(+898 files in other folders)
