[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapter-studio-cli"
version = "0.1.0"
description = "Command-line interface for Apple Foundation Models adapter training toolkit"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Rudrank Riyam" }
]

dependencies = []

[project.scripts]
adapter-studio = "adapter_cli.__main__:main"

[tool.setuptools]
packages = ["adapter_cli", "adapter_cli.commands"]
