[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foundation-models-adapter-studio"
version = "0.2.0"
description = "Command-line interface for Apple Foundation Models adapter training toolkit"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Rudrank Riyam" }
]

dependencies = []

[project.scripts]
fmas = "adapter_cli.__main__:main"

[tool.setuptools]
packages = ["adapter_cli", "adapter_cli.commands"]
